--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2322,23 +2322,23 @@
     <section class="widget" id="table">
       <h3>Table</h3>
       <p>
-        Work on drafting this section is tracked by
-        <a href="https://github.com/w3c/aria-practices/issues/90">issue 90</a>.
+        Please provide feedback on this section in
+        <a href="https://github.com/w3c/aria-practices/issues/526">issue 526.</a>
       </p>
       <p>
-        Like an HTML <code>table</code> element, a WAI-ARIA table is a static tabular structure containing one or more rows that each contain one or more cells; it is not an interactive widget.
+        Like an HTML <code>table</code> element, a WAI-ARIA <a href="#table" class="role-reference">table</a> is a static tabular structure containing one or more rows that each contain one or more cells; it is not an interactive widget.
         Thus, its cells are not focusable or selectable.
         The <a href="#grid">grid pattern</a> is used to make an interactive widget that has a tabular structure.
       </p>
       <p>
-        However, just like with HTML <code>table</code> elements, WAI-ARIA tables are often used to present information that contains interactive widgets.
-        Each widget contained in a table is a separate stop in the page tab sequence.
-        If a table includes a significant number of widgets, the length of the page tab sequence can be dramatically reduced by replacing the table with a grid.
+        However, tables are often used to present a combination of information and interactive widgets.
+        Since a table is not a widget, Each widget contained in a table is a separate stop in the page tab sequence.
+        If the number of widgets is large, replacing the table with a grid can dramatically reduce the length of the page tab sequence because a grid is a composite widget that can contain other widgets.
       </p>
       <p class="note">
         As with other WAI-ARIA roles that have a native host language equivalent, 
         authors are strongly encouraged to use a native HTML <code>table</code> element whenever possible.
-        This is especially important with role <code>table</code> since it is a new feature of WAI-ARIA 1.1.
+        This is especially important with role <code>table</code> because it is a new feature of WAI-ARIA 1.1.
         It is thus advisable to test implementations thoroughly with each browser and assistive technology combination that could be used by the target audience.
       </p>
       <section class="notoc">
