--- a/examples/table/table.html
+++ b/examples/table/table.html
@@ -2,20 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<!--
-  An example that was implemented with this template can be found in: examples/checkbox/checkbox-1.html.
-  This template is for examples where only one implementation of the design pattern is demonstrated.
-  If you use this template file, rename it to reflect the name of the example, e.g., SimpleCheckbox.html.
-  Similarly, rename the javascript and CSS stub files in the js and css subdirectories and update the head element of this file.
--->
-
-<!--
-  Give this example implementation a name and put it in the title element,
-  e.g., "Checkbox" if implementing the checkbox pattern.
-  The name should be unique if the pattern will have multiple implementations,
-  e.g., "Simple Two-State Checkbox" or "Three-State Checkbox".
--->
-<title>EXAMPLE_NAME Example | WAI-ARIA Authoring Practices 1.1</title>
+<title>Table Example | WAI-ARIA Authoring Practices 1.1</title>
 
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
 <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
@@ -24,122 +11,68 @@
 <script src="../js/highlight.pack.js"></script>
 <script src="../js/app.js"></script>
 
-<!--  js and css for this example.
-  When developing an example implementation of a design pattern,
-  these files will contain the CSS and JS for the example implementation.
-  Rename these files to match the name of the example, e.g., checkbox.js if implementing the checkbox design pattern.
--->
-<link href="css/example_name.css" rel="stylesheet">
-<script src="js/example_name.js" type="text/javascript"></script>
+<!-- css for this example. -->
+<link href="css/table.css" rel="stylesheet">
 </head>
 <body>
-  <main> <!--  Repeat the name of the example in this H1  -->
-  <h1>EXAMPLE_NAME Example</h1>
+  <h1>Table Example</h1>
   <p>
-    <!-- Provide an overview of the example where the first sentence provides a link to the section of aria-practices.html that describes the pattern this example implements. -->
-    Replace this paragraph with an overview of the example that is something like the following. The
-    below example section demonstrates a simple checkbox that implements the
-    <a href="../../#checkbox">design pattern for checkbox.</a>
-    This example uses ... summarize salient techniques )
+    <strong>NOTE:</strong> This example page is not complete and is not yet ready for review.
+    Work on this page is tracked in
+    <a href="https://github.com/w3c/aria-practices/issues/242">issue 242.</a>
+  </p>
+  <p>
+    The below example illustrates an implementation of the WAI-ARIA
+    <a href="../../#table">table design pattern.</a>
+    Note that when possible, using a native HTML <code>table</code> element is recommended.
   </p>
   <p>Similar examples include: </p>
   <ul>
-    <li><a href="#">example name</a>: summarize what this related example demonstrates.</li>
-    <!--  list other examples that implement the same design pattern. -->
+    <li><a href="../grid/LayoutGrids.html">Layout Grid Examples</a>: Three example implementations of grids that are used to lay out widgets, including a collection of navigation links, a message recipients list, and a set of search results.</li>
+    <li><a href="../grid/dataGrids.html">Data Grid Examples</a>: Three example implementations of grid that include features relevant to presenting tabular information, such as content editing, sort, and column hiding.</li>
+    <li><a href="../grid/advancedDataGrid.html">Advanced Data Grid Example</a>: Example of a grid with behaviors and features similar to a typical spreadsheet, including cell and row selection.</li>
   </ul>
 
   <section>
     <h2 id="ex_label">Example</h2>
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
-    <!--
-      Note the ID of the following div that contains the example HTML is used as a parameter for the sourceCode.add() function.
-      The sourceCode functions in the examples/js/examples.js render the HTML source to show it to the reader of the example page.
-      If you change the ID of this div, be sure to update the parameters of the sourceCode.add() function call, which is made following the div with id="sc1" where the HTML is render.
-      The div for the rendered HTML source is in the last section of the page.
-    -->
     <div id="ex1">
-      <!-- Replace content of this div with the example.  -->
-      <p>This is the place where the reader will experience the functioning example.</p>
-      <ul>
-        <li>The HTML in this section along with the javascript and CSS it uses demonstrate
-          the design pattern.</li>
-        <li>When developing an example implementation for this guide, please follow the
-          <a href="https://ianpouncey.github.io/code-guide/">APG example coding guidelines</a>.
-        </li>
-        <!--  Target of previous link will need to be updated when we move the guidelines into the wiki from Ian's repo.  -->
-
-        <script type="text/javascript">
-          <!--  Javascript relavant to example -->
-          var i;
-          var str = "text"
-          for(i = 0; i < str.length; i++) {
-            console.log(str[i]);
-            var code = "<p>Hello World!</p>";
-          }
-        </script>
-      </ul>
+      <div role="table" aria-label="Students" aria-describedby="students_table_desc">
+        <div id="students_table_desc">Students currently enrolled in WAI-ARIA 101 for the coming semester</div>
+        <div role="rowgroup">
+          <div role="row">
+            <span role="columnheader">First Name</span>
+            <span role="columnheader">Last Name</span>
+            <span role="columnheader">Company</span>
+            <span role="columnheader">Address</span>
+          </div>
+        </div>
+        <div role="rowgroup">
+          <div role="row">
+            <span role="cell">Fred</span>
+            <span role="cell">Jackson</span>
+            <span role="cell">Acme, Inc.</span>
+            <span role="cell">123 Broad St.</span>
+          </div>
+          <div role="row">
+            <span role="cell">Sara</span>
+            <span role="cell">James</span>
+            <span role="cell">Acme, Inc.</span>
+            <span role="cell">123 Broad St.</span>
+          </div>
+        </div>
+      </div>
     </div>
     <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
   </section>
 
   <section>
-    <h2>Accessibility Features</h2>
-    <p class="annotate">Optional section: If appropriate, please replace this content with a list of any special or noteworthy accessibility features
-      demonstrated in this implementation, such as:</p>
-    <ol>
-      <li>What distinguishes this example from related examples.</li>
-      <li>Keyboard chortcuts, live regions,  unusual event handling, or other ancillary best practices that are employed.</li>
-      <li>Do not include information that would be repeated in the following keyboard and attribute sections.</li>
-      <li>Delete this section if not needed.</li>
-    </ol>
-  </section>
-
-  <section>
     <h2 id="kbd_label">Keyboard Support</h2>
-    <!--
-      List the keys supported in this example.
-      Remember to:
-      Use kbd tags,e.g. <kbd>KeyName</kbd>.
-      Key names use first-letter caps, e.g., <kbd>Enter</kbd>.
-      Single space between multiple Words, e.g., <kbd>Up Arrow</kbd>.
-      Use + to separate modifiers, e.g., <kbd>Control + Right Arrow</kbd>.
-      One key per row, e.g., do not combine <kbd>Up Arrow</kbd> and <kbd>Down Arrow</kbd> into a single row.
-      Do not use the word "key", e.g., do not write <kbd>Enter Key</kbd> or <kbd>Enter</kbd> key.
-     -->
-    <table aria-labelledby="kbd_label" class="def">
-      <thead>
-        <tr>
-          <th>Key</th>
-          <th>Function</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th><kbd>KeyName</kbd></th>
-          <td>
-            Description of key function.
-            <!--  Do not use a list if there is only one function for the key.  -->
-          </td>
-        </tr>
-        <tr>
-          <th><kbd>KeyName</kbd></th>
-          <td>
-            <ul>
-              <li>If condition 1, performs function 1.</li>
-              <li>If condition 2, performs function 2.</li>
-              <li>Only use a list if multiple statements are needed.</li>
-            </ul>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <p>Not Applicable</p>
   </section>
 
   <section>
     <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
-    <!--
-      Update this table to describe how roles, properties, states, and tabindex are used in this example.
-    -->
     <table aria-labelledby="rps_label" class="data attributes">
       <thead>
         <tr>
@@ -151,28 +84,55 @@
       </thead>
       <tbody>
         <tr>
-          <th scope="row"><code>RoleName</code></th>
-          <td><!--  Leave this cell blank in rows where a role is being described. --></td>
-          <td><code>HTML_ELEMENT</code></td>
+          <th scope="row"><code>table</code></th>
+          <td></td>
+          <td><code>div</code></td>
+          <td>Identifies the element containing the table structure.</td>
+        </tr>
+        <tr>
+          <td></td>
+          <th scope="row">
+            <code>aria-label=&quot;Students&quot;</code>
+          </th>
+          <td><code>div</code></td>
+          <td>Provides an accessible name for the table.</td>
+        </tr>
+        <tr>
+          <td></td>
+          <th scope="row">
+            <code>aria-describedby=&quot;IDREF&quot;</code>
+          </th>
+          <td><code>div</code></td>
+          <td>Refers to the element that serves as the caption for the table.</td>
+        </tr>
+        <tr>
+          <th scope="row"><code>rowgroup</code></th>
+          <td></td>
+          <td><code>div</code></td>
           <td>
-            Describe usage/purpose, e.g., indicates the focusable element that serves as the ...
+            <ul>
+              <li>Identifies the elements that serve as containers for the table header and table body rows.</li>
+              <li>Unlike HTML, WAI-ARIA does not include separate roles for the table header and table body row sets.</li>
+            </ul>
           </td>
         </tr>
         <tr>
-          <td>
-            <!--  Leave this cell blank in rows that describe attributes applied to the element with the previously described role.
-              Make a row like this for each attribute/value pair.
-          -->
-          </td>
-          <th scope="row"><code>AttributeName=<q>AttributeValue</q></code></th>
-          <td><code>HTML_ELEMENT</code></td>
-          <td>
-            <ul>
-              <li>explanation of usage, purpose, benefit, and/or guidance relevant to this implementation.</li>
-              <li>If making multiple statements, use list for brevity and clarity</li>
-              <li>Do not make a single item list.</li>
-            </ul>
-          </td>
+          <th scope="row"><code>row</code></th>
+          <td></td>
+          <td><code>div</code></td>
+          <td>Identifies each element that contains the cells for a row.</td>
+        </tr>
+        <tr>
+          <th scope="row"><code>columnheader</code></th>
+          <td></td>
+          <td><code>span</code></td>
+          <td>Identifies elements that serve as a cell containing a column label.</td>
+        </tr>
+        <tr>
+          <th scope="row"><code>cell</code></th>
+          <td></td>
+          <td><code>span</code></td>
+          <td>Identifies elements containing content for a single cell.</td>
         </tr>
       </tbody>
     </table>
@@ -184,11 +144,10 @@
     <ul>
       <li>
         CSS:
-        <a href="css/example_name.css" type="tex/css">example_name.css</a>
+        <a href="css/table.css" type="tex/css">table.css</a>
       </li>
       <li>
-        Javascript:
-        <a href="js/example_name.js" type="text/javascript">example_name.js</a>
+        Javascript: Not applicable.
       </li>
     </ul>
   </section>
@@ -198,11 +157,6 @@
     <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of"></div>
     <pre><code id="sc1"></code></pre>
     <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of"></div>
-    <!--
-      The following script will show the reader the HTML source for the example that is in the div with ID 'ex1'.
-      It renders the HTML in the preceding pre element with ID 'sc1'.
-      If you change the ID of either the 'ex1' div or the 'sc1' pre, be sure to update the sourceCode.add function parameters.
-      -->
     <script>
       sourceCode.add('sc1', 'ex1');
       sourceCode.make();
@@ -210,8 +164,7 @@
   </section>
   </main>
   <nav>
-    <!--  Update the pattern_ID parameter of this link to refer to the APG design pattern section related to this example.  -->
-    <a href="../../#pattern_ID">EXAMPLE_NAME Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
+    <a href="../../#table">Table Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
   </nav>
 </body>
 </html>
