--- a/examples/grid/LayoutGrids.html
+++ b/examples/grid/LayoutGrids.html
@@ -62,7 +62,7 @@
             <span role="gridcell" class="list-link"><a tabindex="-1" href="https://www.w3.org/WAI/intro/aria.php">WAI-ARIA Overview</a></span>
             <span role="gridcell" class="list-link"><a tabindex="-1" href="https://www.w3.org/WAI/intro/wcag">WCAG Overview</a></span>
             <span role="gridcell" class="list-link"><a tabindex="-1" href="https://www.w3.org/TR/html5/">HTML 5 Specification</a></span>
-            <span role="gridcell" class="list-link"><a tabindex="-1" href="https://www.w3.org/TR/2015/WD-SVG2-20150915/">SVG 2 Specification</a></span>
+            <span role="gridcell" class="list-link"><a tabindex="-1" href="https://www.w3.org/TR/SVG2/">SVG 2 Specification</a></span>
           </div>
         </div>
         <div id="grid-nux" class="grid-nux hidden" role="region" aria-label="Grid Instructions" tabindex="0">
@@ -93,7 +93,7 @@
       <ol>
         <li>
           This grid includes three features to enhance perception of the availability of arrow key navigation:
-          <ol>
+          <ol type="A">
             <li>The focus indicator changes to a dotted blue box.</li>
             <li>When screen size is sufficiently large, A graphic of an arrow keypad appears in the page gutter on the bottom left.</li>
             <li>
@@ -166,13 +166,13 @@
       <h4>Notes</h4>
       <ol>
         <li>This grid demonstrates that logical rows do not have to be vertically stacked.
-          <ul>
+          <ol type="A">
             <li>Each logical row has two cells: one containing a recipient name link and one containing the remove icon for that recipient.</li>
             <li>There are multiple logical rows arranged in a line across the screen.</li>
             <li>As the number of recipients grows, new elements wrap to additional lines as needed.</li>
             <li><kbd>Down Arrow</kbd> and <kbd>Up Arrow</kbd> move to the next and previous logical row.</li>
             <li>So for example, <kbd>Down Arrow</kbd> can move focus from recipient to recipient or from remove icon to remove icon.</li>
-          </ul>
+          </ol>
         </li>
         <li>Like in example 1, <kbd>Right Arrow</kbd> can move focus to every element from beginning to end and vice versa with the <kbd>Left Arrow</kbd>.</li>
           <li>Pressing <kbd>Enter</kbd> when focus is in the add recipient input will activate the &quot;Add&quot; button.</li>
@@ -183,6 +183,7 @@
       <h3 id="ex3_label">Example 3: Scrollable Search Results</h3>
       <p>
         This example demonstrates how a grid can make moving through an infinitely large data set as easy and efficient for keyboard users as it is for mouse users.
+        It presents a hypothetical set of search results for W3C resources about WAI-ARIA.
       </p>
       <div role="separator" id="ex3_start_sep" aria-labelledby="ex3_start_sep ex3_label" aria-label="Start of"></div>
       <div id="ex3">
@@ -416,7 +417,7 @@
     <ol>
       <li>If a cell has <code>tabindex=&quot;-1&quot;</code>, focus is placed on the cell. Otherwise, it is placed on a focusable element inside the cell.</li>
       <li>To determine whether arrow key events should wrap focus movement, the example JavaScript looks for the following custom data attributes:
-      <ul>
+      <ol type="A">
         <li>
           <code>data-wrap-cols=&quot;true&quot;</code>: When this custom data attribute is on the grid, <kbd>Right Arrow</kbd> and <kbd>Left Arrow</kbd>
           move focus from column to column even across row boundaries to the column (cell) in the next or previous row.
@@ -427,7 +428,7 @@
           move focus from row to row even across column boundaries to the row (cell) in the next or previous column.
           Setting it <code>false</code> will disable this type of wrapping.
         </li>
-      </ul>
+      </ol>
       </li>
     </ol>
   </section>
